@@ -1,5 +1,6 @@
 2015-03-21  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_alt_speller): Remove some leftovers.
+	* src/search.c: Place some comments better and unwrap some lines.
 
 2015-03-21  Mark Majeres  <mark@engine12.com>
 	* src/text.c (do_alt_speller): Restore the positions of the mark
